# hazrakah

./: .gitattributes  .gitignore  LICENSE  README.md  SKILL.md  pyproject.toml
.gitea/workflows/: pipeline.yaml
.scripts/: build-package  deploy-package  init-venv  make-docs  mateh-server  run-tests
docs/: Makefile  conf.py  contact.rst  index.rst  license.rst  quickstart.rst  requirements.txt
docs/ref/: hazrakah.rst  index.rst  mocks.rst  namespaces.rst  scopes.rst
src/hazrakah/: Cached.py  Container.py  DependencyRegistry.py  DependencyResolver.py  RegistrationError.py  ResolutionError.py  __init__.py  decorators.py  lifetime_decorators.py  provides_decorator.py
src/hazrakah/mocks/: __init__.py  matcher.py  mock.py  patch.py
tests/: Cached_tests.py  ContainerTests.py  Container_tests.py  context_management_tests.py  context_tests.py  dataclass_tests.py  docs_example.py  lifetime_decorators_tests.py  namespaces_tests.py  provides_decorator_tests.py  test_decorators.py
tests/mocks/: matcher_tests.py  mock_aggregation_tests.py  mock_tests.py  patch_tests.py
